--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,11 @@
 
 </string-array>
 
+    <string-array name="spinner_item">
+        <item>全部</item>
+        <item>进行中</item>
+        <item>已完成</item>
+        <item>已超时</item>
+    </string-array>
+
 </resources>
