--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
 
     <string name="add_scan">新增支付宝扫码</string>
 
+    <string name="add_wechat">新增微信扫码</string>
+
 
     <string-array name="planets_array">
     <item>一般訊息</item>
