--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="add_scan">新增支付宝扫码</string>
 
     <string name="add_wechat">新增微信扫码</string>
+    <string name="add_wechat_phone">新增微信转账</string>
 
 
     <string-array name="planets_array">
