--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,10 @@
         <item>已超时</item>
     </string-array>
 
+    <string-array name="spinner_buy">
+        <item>全部</item>
+        <item>银行卡</item>
+        <item>支付宝</item>
+    </string-array>
+
 </resources>
