--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
 
     <string name="add_upload">微信原图（无法解析时选）</string>
     <string name="add_upload2">支付宝原图（无法解析时选）</string>
+    <string name="add_upload3">联银扫码</string>
 
 
     <string-array name="planets_array">
